--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -183,12 +183,16 @@
             width: 1100px;
             margin: 50px auto;
             position: relative;
+            border-top: 4px solid  #c2b2f0;
         }
 
         .footerChildDiv1{
             width: auto;
             height: 150px;
-            margin: 15px auto;
+            margin: 40px auto;
+            text-align: center;
+            align-content: center;
+
         }
 
         .footerChildDiv1 a{
@@ -197,6 +201,7 @@
             font-family: 'Gugi', cursive;
             font-size: 20px;
             text-decoration: none;
+
         }
         .footerChildDiv1 img{
             height: 35px;
@@ -234,6 +239,13 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
+            transition: all 1s;
+        }
+
+        .footerTopButton button{
+            border-radius: 30px;
+            color: white;
+            background-color: black;
         }
 
         .menuDiv{
@@ -248,10 +260,6 @@
             transition: all 1s;
         }
 
-        /* 즉 너비가 max-width 미만일때 적용을 말한다 */
-        @media screen and (max-width: 1100px) {
-
-        }
 
         /* 즉 너비가 max-width 미만일때 적용을 말한다 */
         @media screen and (max-width: 1100px) {
@@ -313,6 +321,10 @@
                 position: relative;
             }
 
+            .footerChildDiv1 a{
+                font-size: 15px;
+            }
+
 
         }
 
@@ -335,9 +347,6 @@
 
             .toggleDiv{
                 position: fixed;
-                background-color: white;
-                border-radius: 50px;
-                opacity: 0.8;
                 left: 20px;
                 bottom: 40px;
                 width: 50px;
@@ -346,6 +355,12 @@
 
             .toggleDiv img{
                 width: 100%;
+            }
+
+            .toggleDiv button{
+                border-radius: 50px;
+                background-color: white;
+                opacity: 0.8;
             }
 
             .menuDiv{
@@ -360,18 +375,35 @@
             .menuDiv a{
                 font-family: 'Gugi', cursive;
                 color: white;
+                display: block;
+                line-height: 20px;
             }
 
-            .menuDiv li{
 
-                margin: 5px 0;
-            }
-
-            .menuDiv h2{
-                margin: 5px 0 0 5px;
+            .menuDiv h3{
                 font-family: 'Gugi', cursive;
-                color: white
+                color: white;
+                display: block;
             }
+
+            .menuDiv button{
+                display: block;
+                margin: 10px 0;
+                border-radius: 30px;
+                color: white;
+                background-color: #c2b2f0;
+                font-family: 'Gugi', cursive;
+            }
+
+            .footerChildDiv1 a{
+                display: block;
+                font-size: 20px;
+            }
+
+            .menuDiv div{
+                margin: 10px 0 0 10px;
+            }
+
 
         }
 
