--- a/src/main/resources/templates/skillBoard/skillBoardWrite.html
+++ b/src/main/resources/templates/skillBoard/skillBoardWrite.html
@@ -31,6 +31,7 @@
         .summernote{
             width: 100vw;
             height: 70vh;
+            min-height: 500px;
         }
 
         .summernote img{
