--- a/src/main/resources/templates/skillBoard/skillBoardMain.html
+++ b/src/main/resources/templates/skillBoard/skillBoardMain.html
@@ -68,22 +68,39 @@
 
         .boardThumImage{
             width: 80%;
+            height: 300px;
             margin: 30px auto;
         }
 
         .boardThumImage img{
             width: 100%;
+            max-width: 100%;
+            height: 100%;
+            max-height: 100%;
         }
 
         .boardListNumber{
             position: absolute;
             bottom: -20px;
             width: 100%;
+            border: solid 2px black;
+            border-radius: 10px;
+            align-content: center;
         }
 
-        .boardListNumber ul,li{
+        .boardListNumber ul{
+            font-size: 20px;
+            font-family: 'Do Hyeon', sans-serif;
             list-style: none;
             display: inline;
+
+        }
+        .boardListNumber li{
+            list-style: none;
+            display: inline;
+            margin: 0 10px;
+            width: 10px;
+            font-family: 'Do Hyeon', sans-serif;
         }
 
 
@@ -108,6 +125,13 @@
 <th:block layout:fragment="script">
     <script type="text/javascript" th:src="@{/js/main.js}"></script>
     <script type="text/javascript" th:src="@{/js/skillboard.js}"></script>
+
+    <script>
+        let i =0;
+    </script>
+
+
+
 </th:block>
 
 <div layout:fragment="content">
@@ -117,7 +141,7 @@
                 <a th:href=" @{/auth/skillboard/details/{id}(id = ${board.getId()})}"  th:each="board :${boards}">
                     <!-- 썸네일만 가져와주는 애를 만들고 여기다가 비교해서 있으면 썸넬사진 없으면 기본썸넬 사진 만들자 -->
                     <div class="boardThumImage">
-                        <img src="/img/thumbnailandimage/defaultthumbnail.png">
+                        <img id="thumnailImage">
                     </div>
                     <div class="boardDiv" >
                        &nbsp;<span class="dateSpan" th:text="${#dates.format(board.getCreateDate(), 'yyyy-MM-dd hh:mm:ss')}"></span>
@@ -125,6 +149,20 @@
                         <span class="spananother" th:if="${board.getUser().getUsername() != 'Y'}" th:text="${board.getUser().getUsername()}"></span><span th:if="${board.getUser().getUsername() == 'Y'}" >관리자(Y)</span>&nbsp;
                         <span class="spananother" th:text="${board.getCount()}"></span>
                     </div>
+                    <script th:inline="javascript">
+                        // 여기다가 model attribute로 경로명 문자열 값을 받는다.
+                        // 자바 스크립트를 이용해 setattribute를 통해 문자열 대입한다.
+                        i =+ 1
+                        var getImageSrc = [[${board.getThumbnail()}]]
+                        var imagetag = document.getElementById('thumnailImage');
+                        imagetag.id = thumnailImage + i
+
+                        if(getImageSrc === null || getImageSrc.length ===0){
+                            imagetag.src = "/img/thumbnailandimage/defaultthumbnail.png"
+                        }else {
+                            imagetag.src =  getImageSrc
+                        }
+                    </script>
                 </a>
 
                 <div class="boardListNumber">
