--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -160,8 +160,10 @@
         .loginBar{
             /*  로그인시 바가 위에서 아래로 내려오면서 환영합니다. AA님 띄어주기*/
             /* visibility: hidden; */
+            width: 100%;
+            text-align: center;
+            font-family: 'Do Hyeon', sans-serif;
 
-            text-align: left;
         }
 
         .loginBar a{
