--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -37,7 +37,7 @@
     </div>
 
     <div id="menuDiv" class="menuDiv">
-        <div>
+        <div class="menuDivChild">
             <h3><a href="/" >YBLOGLAB</a></h3>
             <a href="/auth/patchnote" >공지</a></li>
             <a  href="/auth/boardmain">자유게시판</a></li>
